# MySPIM

./: CMakeLists.txt  README.md  project.c  spimcore.c  spimcore.h
